--- a/bert.ipynb
+++ b/bert.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Topological Analysis of Attention Maps in Transformer type models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 98,
    "metadata": {},
@@ -20,6 +34,13 @@
     "\n",
     "from scipy.sparse import csgraph\n",
     "from scipy.sparse import csr_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utility functions"
    ]
   },
   {
@@ -137,6 +158,13 @@
     "        return attention, tokens\n",
     "    else:\n",
     "        return attention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bert"
    ]
   },
   {
